1. fixed failed unit tests by fixting the item_list_css 2. now will throw exception if item_list_css is incorrect 3. changed some fixtures.

--- a/spec/fixtures/page1_with_invalid_link.html
+++ b/spec/fixtures/page1_with_invalid_link.html
@@ -5,7 +5,8 @@
 -->
 <html>
     <body>
-        <table class="tblist">
+        <div id ="infolist">
+        <table>
             <tr logr="">
                 <td>
                     <span class="t"> Invalid link name (redirect somewhere)
@@ -39,6 +40,7 @@
                 </td>
             </tr>
         </table>
+        </div>
         <div class="pager">
             <a class="next" href="page2.html">Next Page</span>
         </div>
