refactoring: moving methods from source_website to crawler

--- a/spec/fixtures/page1_the_simplest.html
+++ b/spec/fixtures/page1_the_simplest.html
@@ -1,28 +1,79 @@
-<!--
-    items_list_css "table.tblist tr[logr]"
-    item_detail_page_url_css ".t a[target='_blank']"
-    next_page_css ".pager .next"
--->
 <html>
     <body>
-        <table class="tblist">
+        <table id="infolist">
             <tr logr="">
                 <td>
-                    <span class="t"> item 1
-                        <a href="item1_url" target="_blank"></a>
+                    <span class="t"> item 1(page1)
+                        <a href="item1_page1_url" target="_blank"></a>
                     </span>
                 </td>
             </tr>
             <tr logr="">
                 <td>
-                    <span class="t"> item 2
-                        <a href="item2_url" target="_blank"></a>
+                    <span class="t"> item 2(page1)
+                        <a href="item2_page1_url" target="_blank"></a>
+                    </span>
+                </td>
+            </tr>
+            <tr logr="">
+                <td>
+                    <span class="t"> item 3(page1)
+                        <a href="item3_page1_url" target="_blank"></a>
+                    </span>
+                </td>
+            </tr>
+            <tr logr="">
+                <td>
+                    <span class="t"> item 4(page1)
+                        <a href="item4_page1_url" target="_blank"></a>
+                    </span>
+                </td>
+            </tr>
+            <tr logr="">
+                <td>
+                    <span class="t"> item 5(page1)
+                        <a href="item5_page1_url" target="_blank"></a>
+                    </span>
+                </td>
+            </tr>
+            <tr logr="">
+                <td>
+                    <span class="t"> item 6(page1)
+                        <a href="item6_page1_url" target="_blank"></a>
+                    </span>
+                </td>
+            </tr>
+            <tr logr="">
+                <td>
+                    <span class="t"> item 7(page1)
+                        <a href="item7_page1_url" target="_blank"></a>
+                    </span>
+                </td>
+            </tr>
+            <tr logr="">
+                <td>
+                    <span class="t"> item 8(page1)
+                        <a href="item8_page1_url" target="_blank"></a>
+                    </span>
+                </td>
+            </tr>
+            <tr logr="">
+                <td>
+                    <span class="t"> item 9(page1)
+                        <a href="item9_page1_url" target="_blank"></a>
+                    </span>
+                </td>
+            </tr>
+            <tr logr="">
+                <td>
+                    <span class="t"> item 10(page1)
+                        <a href="item10_page1_url" target="_blank"></a>
                     </span>
                 </td>
             </tr>
         </table>
         <div class="pager">
-            <a class="next" href="page2.html">Next Page</span>
+            <a class="next" href="page2_the_simplest.html">Next Page</span>
         </div>
     </body>
 </html>
